<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menuStudyWords"
          android:icon="@drawable/ic_study"
          android:showAsAction="ifRoom|withText"
          android:title="@string/study_words"
        />
    <item android:id="@+id/menuAdd"
          android:showAsAction="never"
          android:title="@string/add_phrase_word"
        />
    <item android:id="@+id/menuEdit"
          android:showAsAction="never"
          android:title="@string/edit_selected"
        />
    <item android:id="@+id/menuDeleteSelected"
          android:showAsAction="never"
          android:title="@string/delete_selected"
        />
    <item android:id="@+id/menuDeleteAll"
          android:showAsAction="never"
          android:title="@string/delete_all"
        />
    <item android:id="@+id/menuResetStudyProgress"
          android:showAsAction="never"
          android:title="@string/reset_study_progress"
        />
    <item android:id="@+id/menuDeleteLearnedWords"
          android:showAsAction="never"
          android:title="@string/delete_learned_words"
        />
    <item android:id="@+id/menuVoiceInTraining"
          android:showAsAction="never"
          android:title="@string/voice_in_training"
          android:checkable="true"
        />
</menu>